k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
  namespace: wisecow
  labels:
    app.kubernetes.io/name: wisecow
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wisecow
  ports:
    - name: http
      port: 80
      targetPort: 4499
      protocol: TCP
